added: responsive  header

--- a/index.html
+++ b/index.html
@@ -1,13 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./main.scss">
-    <title>Net Co</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./main.css" />
+    <title>Responsive Net Co</title>
+  </head>
+  <body>
+    <header class="web__header">
+      <div class="container header_wrapper">
+        <a href="#">
+          <img
+            src="./images/web__logo.svg"
+            alt="Web logo Net co"
+            width="118"
+            height="41"
+          />
+        </a>
+
+        <nav class="header_nav">
+          <span class="business_location">г.Ташкент ул. Мустакиллик 5/1</span>
+
+          <span class="business_contnact"
+            >+998 71 202-00-22, +998 71 232-48-84
+          </span>
+        </nav>
+
+        <div class="header__menu">
+          <span class="menu">МЕНЮ</span>
+          <img
+            src="./images/menu__icon.svg"
+            alt="menu icon"
+            width="40"
+            height="19"
+          />
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
