added: Bonus section

--- a/index.html
+++ b/index.html
@@ -45,5 +45,100 @@
         </div>
       </div>
     </header>
+
+    <!-- WEBSITE HEADER ENDED -->
+
+    <!-- WEBSITE BONUS SECTION START  -->
+
+    <div class="bonus__section__wrapper container">
+      <h1 class="bonus__section-titel">Каталог скидок и бонусов</h1>
+
+      <div class="bonus__item-line" id="bonus__item-line">
+        <div class="bonus__items item-1">
+          <img
+            class="item__image"
+            src="./images/food.svg"
+            alt="food dishes icon"
+            width="80"
+            height="80"
+          />
+          <p class="item__name">Вкусно поесть</p>
+        </div>
+        <!-- item 2 -->
+        <div class="bonus__items item-2">
+          <img
+            class="item__image"
+            src="./images/shopping.svg"
+            alt="shopping item icon"
+            width="80"
+            height="80"
+          />
+          <p class="item__name">Мир покупок</p>
+        </div>
+        <!-- item 3 -->
+
+        <div class="bonus__items item-3">
+          <img
+            class="item__image"
+            src="./images/health.svg"
+            alt="health care icon"
+            width="80"
+            height="80"
+          />
+          <p class="item__name">Красота и здоровье</p>
+        </div>
+
+        <!-- item 4 -->
+        <div class="bonus__items item-4">
+          <img
+            class="item__image"
+            src="./images/book.svg"
+            alt="book icon"
+            width="80"
+            height="80"
+          />
+          <p class="item__name">Образование</p>
+        </div>
+
+        <!-- item 5 -->
+
+        <div class="bonus__items item-5">
+          <img
+            class="item__image"
+            src="./images/service.svg"
+            alt="service icon"
+            width="80"
+            height="80"
+          />
+          <p class="item__name">Услуги</p>
+        </div>
+
+        <!-- item 6 -->
+
+        <div class="bonus__items item-6">
+          <img
+            class="item__image"
+            src="./images/travel.svg"
+            alt="travel icon"
+            width="80"
+            height="80"
+          />
+          <p class="item__name">Отдых</p>
+        </div>
+
+        <!-- item 7 -->
+
+        <div class="bonus__items item-7">
+          <img
+            class="item__image"
+            src="./images/coffee.svg"
+            alt="travel icon"
+            width="80"
+            height="80"
+          />
+          <p class="item__name">Кофейня</p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
