--- a/index.html
+++ b/index.html
@@ -140,5 +140,623 @@
         </div>
       </div>
     </div>
+
+    <!-- BONUS SECTION ENDED -->
+
+    <!-- DISCOUNT SECTION START -->
+
+    <div class="discount__section-wrapper container">
+      <!-- ROW START -->
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 g-4">
+        <!-- COL  -  1 -->
+
+        <div class="col discount__card">
+          <div class="card">
+            <img
+              src="./images/yapona__mama.png"
+              class="card-img-top"
+              alt="Yapona mama image"
+              height="200"
+            />
+
+            <div class="discount__box">
+              <img
+                class="discount__image"
+                src="./images/yapona__logo.svg"
+                alt="Yapona mama logo"
+                width="55"
+                height="55"
+              />
+              <span class="discount__percent">10%</span>
+            </div>
+            <div class="card-body discount__section-body">
+              <h5 class="card-title discount__body-titel">Япона Мама</h5>
+
+              <span class="business__type color__yellow">Ресторан</span>
+
+              <p class="building__address"><b>Адрес: ул.</b> Мирабадская, 9а</p>
+
+              <p class="address__navigation">
+                <b>Ориентир:</b> гостиница Grand Mir
+              </p>
+
+              <button type="submit" class="discount__btn">Подробнее</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- COL - 2 -->
+
+        <div class="col discount__card">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="./images/new__town.png"
+              alt="building images"
+              width="298"
+              height="200"
+            />
+
+            <div class="discount__box">
+              <img
+                class="discount__image"
+                src="./images/newTown-logo.svg"
+                alt="New town mama logo"
+                width="55"
+                height="55"
+              />
+              <span class="discount__percent">12%</span>
+            </div>
+
+            <div class="discount__section-body">
+              <h2 class="discount__body-titel">Английская гимназия New Tone</h2>
+              <span class="business__type color__success">Образование</span>
+
+              <p class="building__address"><b>Адрес: ул.</b> Мирабадская, 9а</p>
+
+              <p class="address__navigation">
+                <b>Ориентир:</b> гостиница Grand Mir
+              </p>
+
+              <button type="submit" class="discount__btn">Подробнее</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- COL - 3 -->
+
+        <div class="col discount__card">
+          <div class="card h-100">
+            <img
+              class="card-img-top"
+              src="./images/wellness.png"
+              alt="building images"
+              width="298"
+              height="200"
+            />
+
+            <div class="discount__box">
+              <img
+                class="discount__image"
+                src="./images/wellness-logo.svg"
+                alt="Yapona mama logo"
+                width="55"
+                height="55"
+              />
+              <span class="discount__percent">9%</span>
+            </div>
+
+            <div class="discount__section-body">
+              <h2 class="discount__body-titel">Siberian Wellness</h2>
+              <span class="business__type color__pink">Красота и здоровье</span>
+
+              <p class="building__address"><b>Адрес: ул.</b> Мирабадская, 9а</p>
+
+              <p class="address__navigation">
+                <b>Ориентир:</b> гостиница Grand Mir
+              </p>
+
+              <button type="submit" class="discount__btn">Подробнее</button>
+            </div>
+          </div>
+        </div>
+        <!-- COL - 4 -->
+
+        <div class="col discount__card">
+          <div class="card h-100">
+            <img
+              class="card-img-top"
+              src="./images/legalact.png"
+              alt="building images"
+              width="298"
+              height="200"
+            />
+
+            <div class="discount__box">
+              <img
+                class="discount__image"
+                src="./images/legalact-logo.svg"
+                alt="Legalact brand logo"
+                width="55"
+                height="55"
+              />
+              <span class="discount__percent">5%</span>
+            </div>
+
+            <div class="discount__section-body">
+              <h2 class="discount__body-titel">Legalact</h2>
+              <span class="business__type color__primary">Услуги</span>
+
+              <p class="building__address"><b>Адрес: ул.</b> Мирабадская, 9а</p>
+
+              <p class="address__navigation">
+                <b>Ориентир:</b> гостиница Grand Mir
+              </p>
+
+              <button type="submit" class="discount__btn">Подробнее</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- COL 5 -->
+        <div class="col discount__card">
+          <div class="card h-100">
+            <img
+              class="card-img-top"
+              src="./images/bassen.png"
+              alt="building images"
+              width="298"
+              height="200"
+            />
+
+            <div class="discount__box">
+              <img
+                class="discount__image"
+                src="./images/avenu-logo.svg"
+                alt="Legalact brand logo"
+                width="55"
+                height="55"
+              />
+              <span class="discount__percent">25%</span>
+            </div>
+
+            <div class="discount__section-body">
+              <h2 class="discount__body-titel">Авеню Парк</h2>
+              <span class="business__type color__danger">Отдых</span>
+
+              <p class="building__address"><b>Адрес: ул.</b> Мирабадская, 9а</p>
+
+              <p class="address__navigation">
+                <b>Ориентир:</b> гостиница Grand Mir
+              </p>
+
+              <button type="submit" class="discount__btn">Подробнее</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- COL 6 -->
+
+        <div class="col discount__card">
+          <div class="card h-100">
+            <img
+              class="card-img-top"
+              src="./images/la_frame.png"
+              alt="building images"
+              width="298"
+              height="200"
+            />
+
+            <div class="discount__box">
+              <img
+                class="discount__image"
+                src="./images/laFrame-logo.svg"
+                alt="Legalact brand logo"
+                width="55"
+                height="55"
+              />
+              <span class="discount__percent">14%</span>
+            </div>
+
+            <div class="discount__section-body">
+              <h2 class="discount__body-titel">La Frame Studio</h2>
+              <span class="business__type color__primary">Услуги</span>
+
+              <p class="building__address"><b>Адрес: ул.</b> Мирабадская, 9а</p>
+
+              <p class="address__navigation">
+                <b>Ориентир:</b> гостиница Grand Mir
+              </p>
+
+              <button type="submit" class="discount__btn">Подробнее</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- COL 7 -->
+        <div class="col discount__card">
+          <div class="card h-100">
+            <img
+              class="card-img-top"
+              src="./images/caffelito.png"
+              alt="building images"
+              width="298"
+              height="200"
+            />
+
+            <div class="discount__box">
+              <img
+                class="discount__image"
+                src="./images/coffee-logo.svg"
+                alt="Legalact brand logo"
+                width="55"
+                height="55"
+              />
+              <span class="discount__percent">3%</span>
+            </div>
+
+            <div class="discount__section-body">
+              <h2 class="discount__body-titel">Caffelito Coffee</h2>
+              <span class="business__type color__orange">Кофейня</span>
+
+              <p class="building__address"><b>Адрес: ул.</b> Мирабадская, 9а</p>
+
+              <p class="address__navigation">
+                <b>Ориентир:</b> гостиница Grand Mir
+              </p>
+
+              <button type="submit" class="discount__btn">Подробнее</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- COL 8 -->
+        <div class="col discount__card">
+          <div class="card h-100">
+            <img
+              class="card-img-top"
+              src="./images/pdp.png"
+              alt="building images"
+              width="298"
+              height="200"
+            />
+
+            <div class="discount__box">
+              <img
+                class="discount__image"
+                src="./images/pdp-logo.svg"
+                alt="Legalact brand logo"
+                width="55"
+                height="55"
+              />
+              <span class="discount__percent">21%</span>
+            </div>
+
+            <div class="discount__section-body">
+              <h2 class="discount__body-titel">Personal Development Process</h2>
+              <span class="business__type color__success">Образование</span>
+
+              <p class="building__address"><b>Адрес: ул.</b> Мирабадская, 9а</p>
+
+              <p class="address__navigation">
+                <b>Ориентир:</b> гостиница Grand Mir
+              </p>
+
+              <button type="submit" class="discount__btn">Подробнее</button>
+            </div>
+          </div>
+        </div>
+        <!-- COL 9 -->
+
+        <div class="col discount__card">
+          <div class="card">
+            <img
+              src="./images/yapona__mama.png"
+              class="card-img-top"
+              alt="Yapona mama image"
+              width="298"
+              height="200"
+            />
+
+            <div class="discount__box">
+              <img
+                class="discount__image"
+                src="./images/yapona__logo.svg"
+                alt="Yapona mama logo"
+                width="55"
+                height="55"
+              />
+              <span class="discount__percent">10%</span>
+            </div>
+            <div class="card-body discount__section-body">
+              <h5 class="card-title discount__body-titel">Япона Мама</h5>
+
+              <span class="business__type color__yellow">Ресторан</span>
+
+              <p class="building__address"><b>Адрес: ул.</b> Мирабадская, 9а</p>
+
+              <p class="address__navigation">
+                <b>Ориентир:</b> гостиница Grand Mir
+              </p>
+
+              <button type="submit" class="discount__btn">Подробнее</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- COL - 2 -->
+
+        <div class="col discount__card">
+          <div class="card">
+            <img
+              class="card-img-top"
+              src="./images/new__town.png"
+              alt="building images"
+              width="298"
+              height="200"
+            />
+
+            <div class="discount__box">
+              <img
+                class="discount__image"
+                src="./images/newTown-logo.svg"
+                alt="New town mama logo"
+                width="55"
+                height="55"
+              />
+              <span class="discount__percent">12%</span>
+            </div>
+
+            <div class="discount__section-body">
+              <h2 class="discount__body-titel">Английская гимназия New Tone</h2>
+              <span class="business__type color__success">Образование</span>
+
+              <p class="building__address"><b>Адрес: ул.</b> Мирабадская, 9а</p>
+
+              <p class="address__navigation">
+                <b>Ориентир:</b> гостиница Grand Mir
+              </p>
+
+              <button type="submit" class="discount__btn">Подробнее</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- COL - 3 -->
+
+        <div class="col discount__card">
+          <div class="card h-100">
+            <img
+              class="card-img-top"
+              src="./images/wellness.png"
+              alt="building images"
+              width="298"
+              height="200"
+            />
+
+            <div class="discount__box">
+              <img
+                class="discount__image"
+                src="./images/wellness-logo.svg"
+                alt="Yapona mama logo"
+                width="55"
+                height="55"
+              />
+              <span class="discount__percent">9%</span>
+            </div>
+
+            <div class="discount__section-body">
+              <h2 class="discount__body-titel">Siberian Wellness</h2>
+              <span class="business__type color__pink">Красота и здоровье</span>
+
+              <p class="building__address"><b>Адрес: ул.</b> Мирабадская, 9а</p>
+
+              <p class="address__navigation">
+                <b>Ориентир:</b> гостиница Grand Mir
+              </p>
+
+              <button type="submit" class="discount__btn">Подробнее</button>
+            </div>
+          </div>
+        </div>
+        <!-- COL - 4 -->
+
+        <div class="col discount__card">
+          <div class="card h-100">
+            <img
+              class="card-img-top"
+              src="./images/legalact.png"
+              alt="building images"
+              width="298"
+              height="200"
+            />
+
+            <div class="discount__box">
+              <img
+                class="discount__image"
+                src="./images/legalact-logo.svg"
+                alt="Legalact brand logo"
+                width="55"
+                height="55"
+              />
+              <span class="discount__percent">5%</span>
+            </div>
+
+            <div class="discount__section-body">
+              <h2 class="discount__body-titel">Legalact</h2>
+              <span class="business__type color__primary">Услуги</span>
+
+              <p class="building__address"><b>Адрес: ул.</b> Мирабадская, 9а</p>
+
+              <p class="address__navigation">
+                <b>Ориентир:</b> гостиница Grand Mir
+              </p>
+
+              <button type="submit" class="discount__btn">Подробнее</button>
+            </div>
+          </div>
+        </div>
+        <!-- COL 10 -->
+
+        <div class="col discount__card">
+          <div class="card h-100">
+            <img
+              class="card-img-top"
+              src="./images/bassen.png"
+              alt="building images"
+              width="298"
+              height="200"
+            />
+
+            <div class="discount__box">
+              <img
+                class="discount__image"
+                src="./images/avenu-logo.svg"
+                alt="Legalact brand logo"
+                width="55"
+                height="55"
+              />
+              <span class="discount__percent">25%</span>
+            </div>
+
+            <div class="discount__section-body">
+              <h2 class="discount__body-titel">Авеню Парк</h2>
+              <span class="business__type color__danger">Отдых</span>
+
+              <p class="building__address"><b>Адрес: ул.</b> Мирабадская, 9а</p>
+
+              <p class="address__navigation">
+                <b>Ориентир:</b> гостиница Grand Mir
+              </p>
+
+              <button type="submit" class="discount__btn">Подробнее</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- COL 6 -->
+
+        <div class="col discount__card">
+          <div class="card h-100">
+            <img
+              class="card-img-top"
+              src="./images/la_frame.png"
+              alt="building images"
+              width="298"
+              height="200"
+            />
+
+            <div class="discount__box">
+              <img
+                class="discount__image"
+                src="./images/laFrame-logo.svg"
+                alt="Legalact brand logo"
+                width="55"
+                height="55"
+              />
+              <span class="discount__percent">14%</span>
+            </div>
+
+            <div class="discount__section-body">
+              <h2 class="discount__body-titel">La Frame Studio</h2>
+              <span class="business__type color__primary">Услуги</span>
+
+              <p class="building__address"><b>Адрес: ул.</b> Мирабадская, 9а</p>
+
+              <p class="address__navigation">
+                <b>Ориентир:</b> гостиница Grand Mir
+              </p>
+
+              <button type="submit" class="discount__btn">Подробнее</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- COL 7 -->
+        <div class="col discount__card">
+          <div class="card h-100">
+            <img
+              class="card-img-top"
+              src="./images/caffelito.png"
+              alt="building images"
+              width="298"
+              height="200"
+            />
+
+            <div class="discount__box">
+              <img
+                class="discount__image"
+                src="./images/coffee-logo.svg"
+                alt="Legalact brand logo"
+                width="55"
+                height="55"
+              />
+              <span class="discount__percent">3%</span>
+            </div>
+
+            <div class="discount__section-body">
+              <h2 class="discount__body-titel">Caffelito Coffee</h2>
+              <span class="business__type color__orange">Кофейня</span>
+
+              <p class="building__address"><b>Адрес: ул.</b> Мирабадская, 9а</p>
+
+              <p class="address__navigation">
+                <b>Ориентир:</b> гостиница Grand Mir
+              </p>
+
+              <button type="submit" class="discount__btn">Подробнее</button>
+            </div>
+          </div>
+        </div>
+
+        <!-- COL 8 -->
+        <div class="col discount__card">
+          <div class="card h-100">
+            <img
+              class="card-img-top"
+              src="./images/pdp.png"
+              alt="building images"
+              width="298"
+              height="200"
+            />
+
+            <div class="discount__box">
+              <img
+                class="discount__image"
+                src="./images/pdp-logo.svg"
+                alt="Legalact brand logo"
+                width="55"
+                height="55"
+              />
+              <span class="discount__percent">21%</span>
+            </div>
+
+            <div class="discount__section-body">
+              <h2 class="discount__body-titel">Personal Development Process</h2>
+              <span class="business__type color__success">Образование</span>
+
+              <p class="building__address"><b>Адрес: ул.</b> Мирабадская, 9а</p>
+
+              <p class="address__navigation">
+                <b>Ориентир:</b> гостиница Grand Mir
+              </p>
+
+              <button type="submit" class="discount__btn">Подробнее</button>
+            </div>
+          </div>
+        </div>
+        <!-- COL 11 -->
+        <!-- COL 12 -->
+      </div>
+    </div>
+
+    <div class="showMore_content">
+      <button class="btn color__darker showMore_btn">Показать еще</button>
+    </div>
+
+
+    <footer class="web__footer">
+      
+    </footer>
   </body>
 </html>
