--- a/index.html
+++ b/index.html
@@ -754,9 +754,31 @@
       <button class="btn color__darker showMore_btn">Показать еще</button>
     </div>
 
+    <footer class="web__footer color__darker p-3">
+      <div class="container d-flex justify-content-between align-items-center">
+        <a href="#"
+          ><img
+            src="./images/web__logo.svg"
+            alt="web logo"
+            width="118"
+            height="41"
+            class="footer__logo"
+        /></a>
+        <div class="contact__box">
+          <span class="brand__name">
+            &copy; 2020 Netco Telecom. Все права защищены.</span
+          >
+          <span class="phone__number"
+            >+998 71 202-00-22, +998 71 232-48-84</span
+          >
+        </div>
 
-    <footer class="web__footer">
-      
+        <div class="social__media">
+          <a class="facebook" href="#">@netcouz</a>
+          <a class="instagram" href="#">@netco_uz</a>
+          <a class="telegram" href="#">@netco.uz</a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
